--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "stylelint": "vue-cli-service lint:style --fix"
   },
   "dependencies": {
+    "epubjs": "^0.3.71",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -23,7 +24,9 @@
     "axios": "^0.18.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "less-plugin-functions": "^1.0.0",
     "mockjs": "^1.0.1-beta3",
+    "postcss-pxtorem": "^4.0.1",
     "stylelint-config-standard": "^18.2.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-template-compiler": "^2.5.17"
