--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "eslint": "vue-cli-service lint",
-    "stylelint": "vue-cli-service lint:style --fix"
+    "stylelint": "stylelint */**/*.{css,less,vue} --fix"
   },
   "dependencies": {
     "epubjs": "^0.3.79",
@@ -15,20 +15,18 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@ascendancyy/vue-cli-plugin-stylelint": "^1.1.0",
-    "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.4",
     "@vue/cli-service": "^3.1.2",
     "@vue/eslint-config-standard": "^4.0.0",
-    "axios": "^0.18.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "less-plugin-functions": "^1.0.0",
     "mockjs": "^1.0.1-beta3",
     "postcss-pxtorem": "^4.0.1",
+    "stylelint": "^9.8.0",
     "stylelint-config-standard": "^18.2.0",
-    "vue-cli-plugin-axios": "0.0.4",
+    "stylelint-webpack-plugin": "^0.10.5",
     "vue-template-compiler": "^2.5.17"
   }
 }
